parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cuerpo
Rule 2     cuerpo -> sentencia
Rule 3     cuerpo -> sentencia cuerpo
Rule 4     cuerpo -> empty
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> declaracion
Rule 7     sentencia -> impresion
Rule 8     sentencia -> input_teclado
Rule 9     sentencia -> sentencia_if
Rule 10    sentencia -> sentencia_while
Rule 11    sentencia -> sentencia_for
Rule 12    sentencia -> sentencia_for_in
Rule 13    sentencia -> funcion
Rule 14    sentencia -> clase
Rule 15    sentencia -> sentencia_return
Rule 16    sentencia -> llamada_funcion_stmt
Rule 17    sentencia -> bloque
Rule 18    sentencia_return -> RETURN expresion SEMICOLON
Rule 19    sentencia_return -> RETURN SEMICOLON
Rule 20    llamada_funcion_stmt -> llamada_funcion SEMICOLON
Rule 21    asignacion -> LET ID ASSIGN expresion SEMICOLON
Rule 22    asignacion -> LET ID COLON tipo ASSIGN expresion SEMICOLON
Rule 23    asignacion -> ID ASSIGN expresion SEMICOLON
Rule 24    asignacion -> acceso_variable ASSIGN expresion SEMICOLON
Rule 25    declaracion -> CONST ID ASSIGN expresion SEMICOLON
Rule 26    declaracion -> CONST ID COLON tipo ASSIGN expresion SEMICOLON
Rule 27    declaracion -> LET ID COLON tipo SEMICOLON
Rule 28    declaracion -> declaracion_array
Rule 29    declaracion -> declaracion_map_set
Rule 30    declaracion_array -> LET ID COLON tipo_array ASSIGN expresion SEMICOLON
Rule 31    declaracion_map_set -> LET ID COLON tipo_generico ASSIGN NEW ID LPAREN argumentos_constructor RPAREN SEMICOLON
Rule 32    declaracion_map_set -> LET ID COLON tipo_generico ASSIGN NEW ID LPAREN RPAREN SEMICOLON
Rule 33    argumentos_constructor -> expresion
Rule 34    argumentos_constructor -> array_de_pares
Rule 35    argumentos_constructor -> lista_argumentos
Rule 36    tipo -> tipo_primitivo
Rule 37    tipo -> tipo_compuesto
Rule 38    tipo -> tipo_array
Rule 39    tipo -> tipo_generico
Rule 40    tipo_primitivo -> STRING_TYPE
Rule 41    tipo_primitivo -> NUMBER_TYPE
Rule 42    tipo_primitivo -> BOOLEAN
Rule 43    tipo_array -> tipo_primitivo LBRACKET RBRACKET
Rule 44    tipo_array -> ID LBRACKET RBRACKET
Rule 45    tipo_generico -> ID LT tipo GT
Rule 46    tipo_generico -> ID LT tipo COMMA tipo GT
Rule 47    tipo_compuesto -> ID
Rule 48    acceso_variable -> ID
Rule 49    acceso_variable -> acceso_variable PUNTO ID
Rule 50    acceso_variable -> acceso_variable LBRACKET expresion RBRACKET
Rule 51    acceso_variable -> llamada_funcion PUNTO ID
Rule 52    llamada_metodo -> acceso_variable PUNTO ID LPAREN argumentos RPAREN
Rule 53    llamada_metodo -> acceso_variable PUNTO ID LPAREN RPAREN
Rule 54    llamada_metodo -> ID PUNTO ID LPAREN argumentos RPAREN
Rule 55    llamada_metodo -> ID PUNTO ID LPAREN RPAREN
Rule 56    impresion -> console_log SEMICOLON
Rule 57    console_log -> ID PUNTO ID LPAREN lista_argumentos RPAREN
Rule 58    lista_argumentos -> expresion
Rule 59    lista_argumentos -> expresion COMMA lista_argumentos
Rule 60    lista_argumentos -> string_con_variables
Rule 61    lista_argumentos -> string_con_variables COMMA lista_argumentos
Rule 62    lista_argumentos -> empty
Rule 63    string_con_variables -> STRING
Rule 64    string_con_variables -> TEMPLATE_LITERAL
Rule 65    string_con_variables -> LBRACE ID RBRACE
Rule 66    input_teclado -> LET ID ASSIGN llamada_funcion SEMICOLON
Rule 67    sentencia_if -> IF LPAREN expresion RPAREN sentencia_ejecutable
Rule 68    sentencia_if -> IF LPAREN expresion RPAREN sentencia_ejecutable ELSE sentencia_ejecutable
Rule 69    sentencia_ejecutable -> bloque
Rule 70    sentencia_ejecutable -> asignacion
Rule 71    sentencia_ejecutable -> impresion
Rule 72    sentencia_ejecutable -> input_teclado
Rule 73    sentencia_ejecutable -> llamada_funcion_stmt
Rule 74    sentencia_ejecutable -> sentencia_return
Rule 75    sentencia_ejecutable -> sentencia_if
Rule 76    sentencia_ejecutable -> sentencia_while
Rule 77    sentencia_ejecutable -> sentencia_for
Rule 78    sentencia_while -> WHILE LPAREN expresion RPAREN bloque
Rule 79    sentencia_for -> FOR LPAREN inicializacion SEMICOLON condicion SEMICOLON incremento RPAREN bloque
Rule 80    sentencia_for -> FOR LPAREN LET ID OF expresion RPAREN bloque
Rule 81    inicializacion -> LET ID ASSIGN expresion
Rule 82    inicializacion -> ID ASSIGN expresion
Rule 83    inicializacion -> declaracion_simple
Rule 84    inicializacion -> empty
Rule 85    declaracion_simple -> LET ID COLON tipo
Rule 86    condicion -> expresion
Rule 87    condicion -> empty
Rule 88    incremento -> ID INC
Rule 89    incremento -> ID DEC
Rule 90    incremento -> ID ASSIGN expresion
Rule 91    incremento -> empty
Rule 92    sentencia_for_in -> FOR LPAREN LET ID IN expresion RPAREN bloque
Rule 93    sentencia_for_in -> FOR LPAREN LET ID OF expresion RPAREN bloque
Rule 94    bloque -> LBRACE cuerpo RBRACE
Rule 95    bloque -> LBRACE RBRACE
Rule 96    expresion -> expresion PLUS expresion
Rule 97    expresion -> expresion MINUS expresion
Rule 98    expresion -> expresion MULT expresion
Rule 99    expresion -> expresion DIV expresion
Rule 100   expresion -> expresion MOD expresion
Rule 101   expresion -> MINUS expresion
Rule 102   expresion -> PLUS expresion
Rule 103   expresion -> expresion GT expresion
Rule 104   expresion -> expresion LT expresion
Rule 105   expresion -> expresion GTE expresion
Rule 106   expresion -> expresion LTE expresion
Rule 107   expresion -> expresion EQ expresion
Rule 108   expresion -> expresion NEQ expresion
Rule 109   expresion -> expresion AND expresion
Rule 110   expresion -> expresion OR expresion
Rule 111   expresion -> NOT expresion
Rule 112   expresion -> expresion PUNTO ID
Rule 113   expresion -> expresion LBRACKET expresion RBRACKET
Rule 114   llamada_funcion -> ID LPAREN argumentos RPAREN
Rule 115   llamada_funcion -> ID LPAREN RPAREN
Rule 116   llamada_funcion -> acceso_variable PUNTO ID LPAREN argumentos RPAREN
Rule 117   llamada_funcion -> acceso_variable PUNTO ID LPAREN RPAREN
Rule 118   expresion -> expresion PUNTO ID LPAREN argumentos RPAREN
Rule 119   expresion -> expresion PUNTO ID LPAREN RPAREN
Rule 120   expresion -> llamada_funcion
Rule 121   expresion -> llamada_metodo
Rule 122   argumentos -> expresion
Rule 123   argumentos -> expresion COMMA argumentos
Rule 124   expresion -> LBRACKET elementos RBRACKET
Rule 125   expresion -> LBRACKET RBRACKET
Rule 126   elementos -> expresion
Rule 127   elementos -> expresion COMMA elementos
Rule 128   expresion -> NEW ID LPAREN array_de_pares RPAREN
Rule 129   expresion -> NEW ID LPAREN expresion RPAREN
Rule 130   expresion -> NEW ID LPAREN RPAREN
Rule 131   array_de_pares -> LBRACKET pares RBRACKET
Rule 132   pares -> par
Rule 133   pares -> par COMMA pares
Rule 134   par -> LBRACKET expresion COMMA expresion RBRACKET
Rule 135   funcion -> FUNCTION ID LPAREN parametros RPAREN LBRACE cuerpo RBRACE
Rule 136   funcion -> FUNCTION ID LPAREN parametros RPAREN COLON tipo LBRACE cuerpo RBRACE
Rule 137   funcion -> FUNCTION ID LPAREN RPAREN LBRACE cuerpo RBRACE
Rule 138   funcion -> FUNCTION ID LPAREN RPAREN COLON tipo LBRACE cuerpo RBRACE
Rule 139   parametros -> parametro
Rule 140   parametros -> parametro COMMA parametros
Rule 141   parametro -> ID
Rule 142   parametro -> ID COLON tipo
Rule 143   clase -> CLASS ID LBRACE cuerpo_clase RBRACE
Rule 144   cuerpo_clase -> elemento_clase
Rule 145   cuerpo_clase -> elemento_clase cuerpo_clase
Rule 146   cuerpo_clase -> empty
Rule 147   elemento_clase -> funcion
Rule 148   elemento_clase -> asignacion
Rule 149   elemento_clase -> declaracion
Rule 150   expresion -> NUMBER
Rule 151   expresion -> STRING
Rule 152   expresion -> ID
Rule 153   expresion -> TRUE
Rule 154   expresion -> FALSE
Rule 155   expresion -> TEMPLATE_LITERAL
Rule 156   expresion -> LPAREN expresion RPAREN
Rule 157   expresion -> acceso_variable
Rule 158   empty -> <empty>

Terminals, with rules where they appear

AND                  : 109
ASSIGN               : 21 22 23 24 25 26 30 31 32 66 81 82 90
BOOLEAN              : 42
CLASS                : 143
COLON                : 22 26 27 30 31 32 85 136 138 142
COMMA                : 46 59 61 123 127 133 134 140
CONST                : 25 26
DEC                  : 89
DIV                  : 99
ELSE                 : 68
EQ                   : 107
FALSE                : 154
FOR                  : 79 80 92 93
FUNCTION             : 135 136 137 138
GT                   : 45 46 103
GTE                  : 105
ID                   : 21 22 23 25 26 27 30 31 31 32 32 44 45 46 47 48 49 51 52 53 54 54 55 55 57 57 65 66 80 81 82 85 88 89 90 92 93 112 114 115 116 117 118 119 128 129 130 135 136 137 138 141 142 143 152
IF                   : 67 68
IN                   : 92
INC                  : 88
LBRACE               : 65 94 95 135 136 137 138 143
LBRACKET             : 43 44 50 113 124 125 131 134
LET                  : 21 22 27 30 31 32 66 80 81 85 92 93
LPAREN               : 31 32 52 53 54 55 57 67 68 78 79 80 92 93 114 115 116 117 118 119 128 129 130 135 136 137 138 156
LT                   : 45 46 104
LTE                  : 106
MINUS                : 97 101
MOD                  : 100
MULT                 : 98
NEQ                  : 108
NEW                  : 31 32 128 129 130
NOT                  : 111
NUMBER               : 150
NUMBER_TYPE          : 41
OF                   : 80 93
OR                   : 110
PLUS                 : 96 102
PUNTO                : 49 51 52 53 54 55 57 112 116 117 118 119
RBRACE               : 65 94 95 135 136 137 138 143
RBRACKET             : 43 44 50 113 124 125 131 134
RETURN               : 18 19
RPAREN               : 31 32 52 53 54 55 57 67 68 78 79 80 92 93 114 115 116 117 118 119 128 129 130 135 136 137 138 156
SEMICOLON            : 18 19 20 21 22 23 24 25 26 27 30 31 32 56 66 79 79
STRING               : 63 151
STRING_TYPE          : 40
TEMPLATE_LITERAL     : 64 155
TRUE                 : 153
WHILE                : 78
error                : 

Nonterminals, with rules where they appear

acceso_variable      : 24 49 50 52 53 116 117 157
argumentos           : 52 54 114 116 118 123
argumentos_constructor : 31
array_de_pares       : 34 128
asignacion           : 5 70 148
bloque               : 17 69 78 79 80 92 93
clase                : 14
condicion            : 79
console_log          : 56
cuerpo               : 1 3 94 135 136 137 138
cuerpo_clase         : 143 145
declaracion          : 6 149
declaracion_array    : 28
declaracion_map_set  : 29
declaracion_simple   : 83
elemento_clase       : 144 145
elementos            : 124 127
empty                : 4 62 84 87 91 146
expresion            : 18 21 22 23 24 25 26 30 33 50 58 59 67 68 78 80 81 82 86 90 92 93 96 96 97 97 98 98 99 99 100 100 101 102 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 112 113 113 118 119 122 123 126 127 129 134 134 156
funcion              : 13 147
impresion            : 7 71
incremento           : 79
inicializacion       : 79
input_teclado        : 8 72
lista_argumentos     : 35 57 59 61
llamada_funcion      : 20 51 66 120
llamada_funcion_stmt : 16 73
llamada_metodo       : 121
par                  : 132 133
parametro            : 139 140
parametros           : 135 136 140
pares                : 131 133
programa             : 0
sentencia            : 2 3
sentencia_ejecutable : 67 68 68
sentencia_for        : 11 77
sentencia_for_in     : 12
sentencia_if         : 9 75
sentencia_return     : 15 74
sentencia_while      : 10 76
string_con_variables : 60 61
tipo                 : 22 26 27 45 46 46 85 136 138 142
tipo_array           : 30 38
tipo_compuesto       : 37
tipo_generico        : 31 32 39
tipo_primitivo       : 36 43

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cuerpo
    (2) cuerpo -> . sentencia
    (3) cuerpo -> . sentencia cuerpo
    (4) cuerpo -> . empty
    (5) sentencia -> . asignacion
    (6) sentencia -> . declaracion
    (7) sentencia -> . impresion
    (8) sentencia -> . input_teclado
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . sentencia_for
    (12) sentencia -> . sentencia_for_in
    (13) sentencia -> . funcion
    (14) sentencia -> . clase
    (15) sentencia -> . sentencia_return
    (16) sentencia -> . llamada_funcion_stmt
    (17) sentencia -> . bloque
    (158) empty -> .
    (21) asignacion -> . LET ID ASSIGN expresion SEMICOLON
    (22) asignacion -> . LET ID COLON tipo ASSIGN expresion SEMICOLON
    (23) asignacion -> . ID ASSIGN expresion SEMICOLON
    (24) asignacion -> . acceso_variable ASSIGN expresion SEMICOLON
    (25) declaracion -> . CONST ID ASSIGN expresion SEMICOLON
    (26) declaracion -> . CONST ID COLON tipo ASSIGN expresion SEMICOLON
    (27) declaracion -> . LET ID COLON tipo SEMICOLON
    (28) declaracion -> . declaracion_array
    (29) declaracion -> . declaracion_map_set
    (56) impresion -> . console_log SEMICOLON
    (66) input_teclado -> . LET ID ASSIGN llamada_funcion SEMICOLON
    (67) sentencia_if -> . IF LPAREN expresion RPAREN sentencia_ejecutable
    (68) sentencia_if -> . IF LPAREN expresion RPAREN sentencia_ejecutable ELSE sentencia_ejecutable
    (78) sentencia_while -> . WHILE LPAREN expresion RPAREN bloque
    (79) sentencia_for -> . FOR LPAREN inicializacion SEMICOLON condicion SEMICOLON incremento RPAREN bloque
    (80) sentencia_for -> . FOR LPAREN LET ID OF expresion RPAREN bloque
    (92) sentencia_for_in -> . FOR LPAREN LET ID IN expresion RPAREN bloque
    (93) sentencia_for_in -> . FOR LPAREN LET ID OF expresion RPAREN bloque
    (135) funcion -> . FUNCTION ID LPAREN parametros RPAREN LBRACE cuerpo RBRACE
    (136) funcion -> . FUNCTION ID LPAREN parametros RPAREN COLON tipo LBRACE cuerpo RBRACE
    (137) funcion -> . FUNCTION ID LPAREN RPAREN LBRACE cuerpo RBRACE
    (138) funcion -> . FUNCTION ID LPAREN RPAREN COLON tipo LBRACE cuerpo RBRACE
    (143) clase -> . CLASS ID LBRACE cuerpo_clase RBRACE
    (18) sentencia_return -> . RETURN expresion SEMICOLON
    (19) sentencia_return -> . RETURN SEMICOLON
    (20) llamada_funcion_stmt -> . llamada_funcion SEMICOLON
    (94) bloque -> . LBRACE cuerpo RBRACE
    (95) bloque -> . LBRACE RBRACE
    (48) acceso_variable -> . ID
    (49) acceso_variable -> . acceso_variable PUNTO ID
    (50) acceso_variable -> . acceso_variable LBRACKET expresion RBRACKET
    (51) acceso_variable -> . llamada_funcion PUNTO ID
    (30) declaracion_array -> . LET ID COLON tipo_array ASSIGN expresion SEMICOLON
    (31) declaracion_map_set -> . LET ID COLON tipo_generico ASSIGN NEW ID LPAREN argumentos_constructor RPAREN SEMICOLON
    (32) declaracion_map_set -> . LET ID COLON tipo_generico ASSIGN NEW ID LPAREN RPAREN SEMICOLON
    (57) console_log -> . ID PUNTO ID LPAREN lista_argumentos RPAREN
    (114) llamada_funcion -> . ID LPAREN argumentos RPAREN
    (115) llamada_funcion -> . ID LPAREN RPAREN
    (116) llamada_funcion -> . acceso_variable PUNTO ID LPAREN argumentos RPAREN
    (117) llamada_funcion -> . acceso_variable PUNTO ID LPAREN RPAREN

    $end            reduce using rule 158 (empty -> .)
    LET             shift and go to state 18
    ID              shift and go to state 19
    CONST           shift and go to state 21
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    FUNCTION        shift and go to state 29
    CLASS           shift and go to state 31
    RETURN          shift and go to state 32
    LBRACE          shift and go to state 30

    programa                       shift and go to state 1
    cuerpo                         shift and go to state 2
    sentencia                      shift and go to state 3
    empty                          shift and go to state 4
    asignacion                     shift and go to state 5
    declaracion                    shift and go to state 6
    impresion                      shift and go to state 7
    input_teclado                  shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_while                shift and go to state 10
    sentencia_for                  shift and go to state 11
    sentencia_for_in               shift and go to state 12
    funcion                        shift and go to state 13
    clase                          shift and go to state 14
    sentencia_return               shift and go to state 15
    llamada_funcion_stmt           shift and go to state 16
    bloque                         shift and go to state 17
    acceso_variable                shift and go to state 20
    declaracion_array              shift and go to state 22
    declaracion_map_set            shift and go to state 23
    console_log                    shift and go to state 24
    llamada_funcion                shift and go to state 25

state 1

    (0) S' -> programa .



state 2

    (1) programa -> cuerpo .

    $end            reduce using rule 1 (programa -> cuerpo .)


state 3

    (2) cuerpo -> sentencia .
    (3) cuerpo -> sentencia . cuerpo
    (2) cuerpo -> . sentencia
    (3) cuerpo -> . sentencia cuerpo
    (4) cuerpo -> . empty
    (5) sentencia -> . asignacion
    (6) sentencia -> . declaracion
    (7) sentencia -> . impresion
    (8) sentencia -> . input_teclado
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . sentencia_for
    (12) sentencia -> . sentencia_for_in
    (13) sentencia -> . funcion
    (14) sentencia -> . clase
    (15) sentencia -> . sentencia_return
    (16) sentencia -> . llamada_funcion_stmt
    (17) sentencia -> . bloque
    (158) empty -> .
    (21) asignacion -> . LET ID ASSIGN expresion SEMICOLON
    (22) asignacion -> . LET ID COLON tipo ASSIGN expresion SEMICOLON
    (23) asignacion -> . ID ASSIGN expresion SEMICOLON
    (24) asignacion -> . acceso_variable ASSIGN expresion SEMICOLON
    (25) declaracion -> . CONST ID ASSIGN expresion SEMICOLON
    (26) declaracion -> . CONST ID COLON tipo ASSIGN expresion SEMICOLON
    (27) declaracion -> . LET ID COLON tipo SEMICOLON
    (28) declaracion -> . declaracion_array
    (29) declaracion -> . declaracion_map_set
    (56) impresion -> . console_log SEMICOLON
    (66) input_teclado -> . LET ID ASSIGN llamada_funcion SEMICOLON
    (67) sentencia_if -> . IF LPAREN expresion RPAREN sentencia_ejecutable
    (68) sentencia_if -> . IF LPAREN expresion RPAREN sentencia_ejecutable ELSE sentencia_ejecutable
    (78) sentencia_while -> . WHILE LPAREN expresion RPAREN bloque
    (79) sentencia_for -> . FOR LPAREN inicializacion SEMICOLON condicion SEMICOLON incremento RPAREN bloque
    (80) sentencia_for -> . FOR LPAREN LET ID OF expresion RPAREN bloque
    (92) sentencia_for_in -> . FOR LPAREN LET ID IN expresion RPAREN bloque
    (93) sentencia_for_in -> . FOR LPAREN LET ID OF expresion RPAREN bloque
    (135) funcion -> . FUNCTION ID LPAREN parametros RPAREN LBRACE cuerpo RBRACE
    (136) funcion -> . FUNCTION ID LPAREN parametros RPAREN COLON tipo LBRACE cuerpo RBRACE
    (137) funcion -> . FUNCTION ID LPAREN RPAREN LBRACE cuerpo RBRACE
    (138) funcion -> . FUNCTION ID LPAREN RPAREN COLON tipo LBRACE cuerpo RBRACE
    (143) clase -> . CLASS ID LBRACE cuerpo_clase RBRACE
    (18) sentencia_return -> . RETURN expresion SEMICOLON
    (19) sentencia_return -> . RETURN SEMICOLON
    (20) llamada_funcion_stmt -> . llamada_funcion SEMICOLON
    (94) bloque -> . LBRACE cuerpo RBRACE
    (95) bloque -> . LBRACE RBRACE
    (48) acceso_variable -> . ID
    (49) acceso_variable -> . acceso_variable PUNTO ID
    (50) acceso_variable -> . acceso_variable LBRACKET expresion RBRACKET
    (51) acceso_variable -> . llamada_funcion PUNTO ID
    (30) declaracion_array -> . LET ID COLON tipo_array ASSIGN expresion SEMICOLON
    (31) declaracion_map_set -> . LET ID COLON tipo_generico ASSIGN NEW ID LPAREN argumentos_constructor RPAREN SEMICOLON
    (32) declaracion_map_set -> . LET ID COLON tipo_generico ASSIGN NEW ID LPAREN RPAREN SEMICOLON
    (57) console_log -> . ID PUNTO ID LPAREN lista_argumentos RPAREN
    (114) llamada_funcion -> . ID LPAREN argumentos RPAREN
    (115) llamada_funcion -> . ID LPAREN RPAREN
    (116) llamada_funcion -> . acceso_variable PUNTO ID LPAREN argumentos RPAREN
    (117) llamada_funcion -> . acceso_variable PUNTO ID LPAREN RPAREN

  ! reduce/reduce conflict for $end resolved using rule 2 (cuerpo -> sentencia .)
  ! reduce/reduce conflict for RBRACE resolved using rule 2 (cuerpo -> sentencia .)
    $end            reduce using rule 2 (cuerpo -> sentencia .)
    RBRACE          reduce using rule 2 (cuerpo -> sentencia .)
    LET             shift and go to state 18
    ID              shift and go to state 19
    CONST           shift and go to state 21
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    FUNCTION        shift and go to state 29
    CLASS           shift and go to state 31
    RETURN          shift and go to state 32
    LBRACE          shift and go to state 30

  ! $end            [ reduce using rule 158 (empty -> .) ]
  ! RBRACE          [ reduce using rule 158 (empty -> .) ]

    sentencia                      shift and go to state 3
    cuerpo                         shift and go to state 33
    empty                          shift and go to state 4
    asignacion                     shift and go to state 5
    declaracion                    shift and go to state 6
    impresion                      shift and go to state 7
    input_teclado                  shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_while                shift and go to state 10
    sentencia_for                  shift and go to state 11
    sentencia_for_in               shift and go to state 12
    funcion                        shift and go to state 13
    clase                          shift and go to state 14
    sentencia_return               shift and go to state 15
    llamada_funcion_stmt           shift and go to state 16
    bloque                         shift and go to state 17
    acceso_variable                shift and go to state 20
    declaracion_array              shift and go to state 22
    declaracion_map_set            shift and go to state 23
    console_log                    shift and go to state 24
    llamada_funcion                shift and go to state 25

state 4

    (4) cuerpo -> empty .

    $end            reduce using rule 4 (cuerpo -> empty .)
    RBRACE          reduce using rule 4 (cuerpo -> empty .)


state 5

    (5) sentencia -> asignacion .

    LET             reduce using rule 5 (sentencia -> asignacion .)
    ID              reduce using rule 5 (sentencia -> asignacion .)
    CONST           reduce using rule 5 (sentencia -> asignacion .)
    IF              reduce using rule 5 (sentencia -> asignacion .)
    WHILE           reduce using rule 5 (sentencia -> asignacion .)
    FOR             reduce using rule 5 (sentencia -> asignacion .)
    FUNCTION        reduce using rule 5 (sentencia -> asignacion .)
    CLASS           reduce using rule 5 (sentencia -> asignacion .)
    RETURN          reduce using rule 5 (sentencia -> asignacion .)
    LBRACE          reduce using rule 5 (sentencia -> asignacion .)
    $end            reduce using rule 5 (sentencia -> asignacion .)
    RBRACE          reduce using rule 5 (sentencia -> asignacion .)


state 6

    (6) sentencia -> declaracion .

    LET             reduce using rule 6 (sentencia -> declaracion .)
    ID              reduce using rule 6 (sentencia -> declaracion .)
    CONST           reduce using rule 6 (sentencia -> declaracion .)
    IF              reduce using rule 6 (sentencia -> declaracion .)
    WHILE           reduce using rule 6 (sentencia -> declaracion .)
    FOR             reduce using rule 6 (sentencia -> declaracion .)
    FUNCTION        reduce using rule 6 (sentencia -> declaracion .)
    CLASS           reduce using rule 6 (sentencia -> declaracion .)
    RETURN          reduce using rule 6 (sentencia -> declaracion .)
    LBRACE          reduce using rule 6 (sentencia -> declaracion .)
    $end            reduce using rule 6 (sentencia -> declaracion .)
    RBRACE          reduce using rule 6 (sentencia -> declaracion .)


state 7

    (7) sentencia -> impresion .

    LET             reduce using rule 7 (sentencia -> impresion .)
    ID              reduce using rule 7 (sentencia -> impresion .)
    CONST           reduce using rule 7 (sentencia -> impresion .)
    IF              reduce using rule 7 (sentencia -> impresion .)
    WHILE           reduce using rule 7 (sentencia -> impresion .)
    FOR             reduce using rule 7 (sentencia -> impresion .)
    FUNCTION        reduce using rule 7 (sentencia -> impresion .)
    CLASS           reduce using rule 7 (sentencia -> impresion .)
    RETURN          reduce using rule 7 (sentencia -> impresion .)
    LBRACE          reduce using rule 7 (sentencia -> impresion .)
    $end            reduce using rule 7 (sentencia -> impresion .)
    RBRACE          reduce using rule 7 (sentencia -> impresion .)


state 8

    (8) sentencia -> input_teclado .

    LET             reduce using rule 8 (sentencia -> input_teclado .)
    ID              reduce using rule 8 (sentencia -> input_teclado .)
    CONST           reduce using rule 8 (sentencia -> input_teclado .)
    IF              reduce using rule 8 (sentencia -> input_teclado .)
    WHILE           reduce using rule 8 (sentencia -> input_teclado .)
    FOR             reduce using rule 8 (sentencia -> input_teclado .)
    FUNCTION        reduce using rule 8 (sentencia -> input_teclado .)
    CLASS           reduce using rule 8 (sentencia -> input_teclado .)
    RETURN          reduce using rule 8 (sentencia -> input_teclado .)
    LBRACE          reduce using rule 8 (sentencia -> input_teclado .)
    $end            reduce using rule 8 (sentencia -> input_teclado .)
    RBRACE          reduce using rule 8 (sentencia -> input_teclado .)


state 9

    (9) sentencia -> sentencia_if .

    LET             reduce using rule 9 (sentencia -> sentencia_if .)
    ID              reduce using rule 9 (sentencia -> sentencia_if .)
    CONST           reduce using rule 9 (sentencia -> sentencia_if .)
    IF              reduce using rule 9 (sentencia -> sentencia_if .)
    WHILE           reduce using rule 9 (sentencia -> sentencia_if .)
    FOR             reduce using rule 9 (sentencia -> sentencia_if .)
    FUNCTION        reduce using rule 9 (sentencia -> sentencia_if .)
    CLASS           reduce using rule 9 (sentencia -> sentencia_if .)
    RETURN          reduce using rule 9 (sentencia -> sentencia_if .)
    LBRACE          reduce using rule 9 (sentencia -> sentencia_if .)
    $end            reduce using rule 9 (sentencia -> sentencia_if .)
    RBRACE          reduce using rule 9 (sentencia -> sentencia_if .)


state 10

    (10) sentencia -> sentencia_while .

    LET             reduce using rule 10 (sentencia -> sentencia_while .)
    ID              reduce using rule 10 (sentencia -> sentencia_while .)
    CONST           reduce using rule 10 (sentencia -> sentencia_while .)
    IF              reduce using rule 10 (sentencia -> sentencia_while .)
    WHILE           reduce using rule 10 (sentencia -> sentencia_while .)
    FOR             reduce using rule 10 (sentencia -> sentencia_while .)
    FUNCTION        reduce using rule 10 (sentencia -> sentencia_while .)
    CLASS           reduce using rule 10 (sentencia -> sentencia_while .)
    RETURN          reduce using rule 10 (sentencia -> sentencia_while .)
    LBRACE          reduce using rule 10 (sentencia -> sentencia_while .)
    $end            reduce using rule 10 (sentencia -> sentencia_while .)
    RBRACE          reduce using rule 10 (sentencia -> sentencia_while .)


state 11

    (11) sentencia -> sentencia_for .

    LET             reduce using rule 11 (sentencia -> sentencia_for .)
    ID              reduce using rule 11 (sentencia -> sentencia_for .)
    CONST           reduce using rule 11 (sentencia -> sentencia_for .)
    IF              reduce using rule 11 (sentencia -> sentencia_for .)
    WHILE           reduce using rule 11 (sentencia -> sentencia_for .)
    FOR             reduce using rule 11 (sentencia -> sentencia_for .)
    FUNCTION        reduce using rule 11 (sentencia -> sentencia_for .)
    CLASS           reduce using rule 11 (sentencia -> sentencia_for .)
    RETURN          reduce using rule 11 (sentencia -> sentencia_for .)
    LBRACE          reduce using rule 11 (sentencia -> sentencia_for .)
    $end            reduce using rule 11 (sentencia -> sentencia_for .)
    RBRACE          reduce using rule 11 (sentencia -> sentencia_for .)


state 12

    (12) sentencia -> sentencia_for_in .

    LET             reduce using rule 12 (sentencia -> sentencia_for_in .)
    ID              reduce using rule 12 (sentencia -> sentencia_for_in .)
    CONST           reduce using rule 12 (sentencia -> sentencia_for_in .)
    IF              reduce using rule 12 (sentencia -> sentencia_for_in .)
    WHILE           reduce using rule 12 (sentencia -> sentencia_for_in .)
    FOR             reduce using rule 12 (sentencia -> sentencia_for_in .)
    FUNCTION        reduce using rule 12 (sentencia -> sentencia_for_in .)
    CLASS           reduce using rule 12 (sentencia -> sentencia_for_in .)
    RETURN          reduce using rule 12 (sentencia -> sentencia_for_in .)
    LBRACE          reduce using rule 12 (sentencia -> sentencia_for_in .)
    $end            reduce using rule 12 (sentencia -> sentencia_for_in .)
    RBRACE          reduce using rule 12 (sentencia -> sentencia_for_in .)


state 13

    (13) sentencia -> funcion .

    LET             reduce using rule 13 (sentencia -> funcion .)
    ID              reduce using rule 13 (sentencia -> funcion .)
    CONST           reduce using rule 13 (sentencia -> funcion .)
    IF              reduce using rule 13 (sentencia -> funcion .)
    WHILE           reduce using rule 13 (sentencia -> funcion .)
    FOR             reduce using rule 13 (sentencia -> funcion .)
    FUNCTION        reduce using rule 13 (sentencia -> funcion .)
    CLASS           reduce using rule 13 (sentencia -> funcion .)
    RETURN          reduce using rule 13 (sentencia -> funcion .)
    LBRACE          reduce using rule 13 (sentencia -> funcion .)
    $end            reduce using rule 13 (sentencia -> funcion .)
    RBRACE          reduce using rule 13 (sentencia -> funcion .)


state 14

    (14) sentencia -> clase .

    LET             reduce using rule 14 (sentencia -> clase .)
    ID              reduce using rule 14 (sentencia -> clase .)
    CONST           reduce using rule 14 (sentencia -> clase .)
    IF              reduce using rule 14 (sentencia -> clase .)
    WHILE           reduce using rule 14 (sentencia -> clase .)
    FOR             reduce using rule 14 (sentencia -> clase .)
    FUNCTION        reduce using rule 14 (sentencia -> clase .)
    CLASS           reduce using rule 14 (sentencia -> clase .)
    RETURN          reduce using rule 14 (sentencia -> clase .)
    LBRACE          reduce using rule 14 (sentencia -> clase .)
    $end            reduce using rule 14 (sentencia -> clase .)
    RBRACE          reduce using rule 14 (sentencia -> clase .)


state 15

    (15) sentencia -> sentencia_return .
